<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signUpUsernameError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpUsernameError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpUsernameHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpPasswordError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpPasswordError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpPasswordHint"
                android:inputType="textPassword"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpFirstNameError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpFirstNameError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpFirstNameHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpLastNameError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpLastNameError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpLastNameHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpEmailError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpEmailError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpEmailHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpCityError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpCityError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpCityHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpStateError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpStateError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpStateHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpCountryError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpCountryError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpCountryHint"
                android:inputType="text"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/signUpBioError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SignUpBioError"
                android:textColor="@color/colorError"/>

            <EditText
                android:id="@+id/signUpBio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/SignUpBio"
                android:inputType="text"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/signUpConfirmationButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SignUpConfirmationButton"
                android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>