<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/logInButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/logInButtonName"/>

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/logOutButtonName"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/signUpButtonName"/>

        <Button
            android:id="@+id/viewProfileButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/viewProfileButtonName"/>

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/addRecipeButtonName"/>

        <Button
            android:id="@+id/recipeBrowserButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/recipeBrowserButtonName"/>


    </LinearLayout>

</LinearLayout>