<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/EditProfileFirstNameError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpFirstNameError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileFirstNameTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileFirstNameTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileFirstNameEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/EditProfileLastNameError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpLastNameError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileLastNameTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileLastNameTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileLastNameEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/EditProfileEmailError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpEmailError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileEmailTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileEmailTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileEmailEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>


        <TextView
            android:id="@+id/EditProfileCityError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpCityError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileCityTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileCityTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileCityEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/EditProfileStateError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpStateError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileStateTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileStateTag"
                android:textSize="20dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/EditProfileStateEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/EditProfileCountryError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpCountryError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileCountryTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileCountryTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileCountryEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/EditProfileBioError"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/SignUpBioError"
            android:textColor="@color/colorError"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EditProfileBioTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EditProfileBioTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/EditProfileBioEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/EditProfileSaveChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/EditProfileSaveChangesButton"/>

        <Button
            android:id="@+id/EditProfileChangePictureButton"
            android:text="@string/EditProfileChangePictureButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/EditProfileDiscardChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/EditProfileDiscardChangesButton"/>

    </LinearLayout>

</LinearLayout>