<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/logInUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/logInUsernameHint"/>

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/LogInPasswordHint"/>

        <Button
            android:id="@+id/logInConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/LogInConfirmationButton"/>
    </LinearLayout>

</LinearLayout>