<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/UserProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UserProfileUsernameTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/UserProfileUsernameTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/UserProfileUsernameEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UserProfileNameTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/UserProfileNameTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/UserProfileNameEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UserProfileEmailTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/UserProfileEmailTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/UserProfileEmailEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UserProfileLocationTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/UserProfileLocationTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/UserProfileLocationEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UserProfileBioTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/UserProfileBioTag"
                android:textSize="20dp"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/UserProfileBioEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/UserProfileEditProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UserProfileEditProfileButton"/>

        <Button
            android:id="@+id/UserProfilePrivacySettingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/UserProfilePrivacySettingsButton"/>

        <Button
            android:id="@+id/UserProfileReturnButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/UserProfileReturnButton"/>

    </LinearLayout>

</LinearLayout>